# Logless

./: CMakeList.txt  CMakeLists.txt  Config.cmake.in  README.md  configure.py
src/: Logger.cpp  Logger.hpp  spawner.cpp
src/logless/: Logger.cpp  Logger.hpp  logger.cpp  logger.hpp
test/: build.sh  main.cpp  spawner  spawner.cpp  test  test.rodata  ttt
test_cmake_add/: CMakeLists.txt
test_cmake_package/: CMakeLists.txt  main.cpp
